imgui working completly with a couple of examples

--- a/rahGRaphics_Test/imgui.ini
+++ b/rahGRaphics_Test/imgui.ini
@@ -4,12 +4,37 @@ Size=400,400
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=27,18
+Pos=110,138
 Size=396,496
 Collapsed=0
 
 [Window][Another Window]
 Pos=60,60
 Size=198,71
+Collapsed=0
+
+[Window][Framerate]
+Pos=5,11
+Size=373,57
+Collapsed=0
+
+[Window][Background Color]
+Pos=5,68
+Size=317,59
+Collapsed=0
+
+[Window][General]
+Pos=7,50
+Size=334,111
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=1,192
+Size=500,440
+Collapsed=0
+
+[Window][World Entities]
+Pos=55,359
+Size=500,440
 Collapsed=0
 
