--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,6 @@ rahAudio_Test/rahAudio_Test.vcxproj.filters
 rahAudio_Test/rahAudio_Test.vcxproj.user
 rahAudio_Test/Log/May  1 2019.txt
 rahAudio_Test/Audio/Cartoons - Witch Doctor (128  kbps).mp3
+rahAudio_Test/Log/May  7 2019.txt
+rahAudio_Test/Audio/Gorillaz - Clint Eastwood (Official Video) (128  kbps).mp3
+rahAudio_Test/Log/May  6 2019.txt
