--- a/rahGRaphics_Test/imgui.ini
+++ b/rahGRaphics_Test/imgui.ini
@@ -24,7 +24,7 @@ Size=317,59
 Collapsed=0
 
 [Window][General]
-Pos=-10,30
+Pos=3,25
 Size=334,111
 Collapsed=0
 
@@ -34,7 +34,17 @@ Size=500,440
 Collapsed=0
 
 [Window][World Entities]
-Pos=6,152
-Size=405,764
+Pos=1,140
+Size=414,394
+Collapsed=0
+
+[Window][Music]
+Pos=60,60
+Size=32,32
+Collapsed=0
+
+[Window][Audio]
+Pos=425,31
+Size=236,277
 Collapsed=0
 
