--- a/rahEngine/rahEngine.vcxproj.filters
+++ b/rahEngine/rahEngine.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="World.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ImgManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ResourceFabric.cpp">
@@ -72,6 +75,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="World.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ImgManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
