--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ rahAudio_Test/Audio/Cartoons - Witch Doctor (128  kbps).mp3
 rahAudio_Test/Log/May  7 2019.txt
 rahAudio_Test/Audio/Gorillaz - Clint Eastwood (Official Video) (128  kbps).mp3
 rahAudio_Test/Log/May  6 2019.txt
+rahAudio_Test/Log/Jun 18 2019.txt
