*box component completed *GUI advanced

--- a/rahGRaphics_Test/imgui.ini
+++ b/rahGRaphics_Test/imgui.ini
@@ -48,3 +48,13 @@ Pos=650,22
 Size=236,277
 Collapsed=0
 
+[Window][BoxComponent]
+Pos=1398,30
+Size=400,323
+Collapsed=0
+
+[Window][AABB Component]
+Pos=1307,23
+Size=575,287
+Collapsed=0
+
