+ListenerComponent ~Component now the init have actor and void  as parameter

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ rahAudio_Test/Log/May  7 2019.txt
 rahAudio_Test/Audio/Gorillaz - Clint Eastwood (Official Video) (128  kbps).mp3
 rahAudio_Test/Log/May  6 2019.txt
 rahAudio_Test/Log/Jun 18 2019.txt
+rahAudio_Test/Log/Jun 23 2019.txt
