*model component gui updated

--- a/rahGRaphics_Test/imgui.ini
+++ b/rahGRaphics_Test/imgui.ini
@@ -54,7 +54,17 @@ Size=400,323
 Collapsed=0
 
 [Window][AABB Component]
-Pos=148,559
-Size=345,363
+Pos=1147,23
+Size=342,354
+Collapsed=0
+
+[Window][AABB]
+Pos=1446,34
+Size=340,352
+Collapsed=0
+
+[Window][Model]
+Pos=1446,392
+Size=337,115
 Collapsed=0
 
