commit of 06/25/2019 +deferred rendering foundation

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,4 @@ rahAudio_Test/Log/Jun 18 2019.txt
 rahAudio_Test/Log/Jun 23 2019.txt
 lib/rahAudio/x64/Debug/rahAudio_Debug.lib
 lib/rahAudio/Win32/Release/rahAudio_Release.lib
+rahGRaphics_Test/caca.dds
