--- a/rahGraphics/rahGraphics.vcxproj
+++ b/rahGraphics/rahGraphics.vcxproj
@@ -173,6 +173,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="CameraDebug.h" />
     <ClInclude Include="ConstantBuffer.h" />
+    <ClInclude Include="DeferredManager.h" />
     <ClInclude Include="FragmentShader.h" />
     <ClInclude Include="GraphicDepthStencilView.h" />
     <ClInclude Include="GraphicDevice.h" />
@@ -201,6 +202,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="CameraDebug.cpp" />
     <ClCompile Include="ConstantBuffer.cpp" />
+    <ClCompile Include="DeferredManager.cpp" />
     <ClCompile Include="FragmentShader.cpp" />
     <ClCompile Include="GraphicDepthStencilView.cpp" />
     <ClCompile Include="GraphicDevice.cpp" />
