*more GUI added *audiocomponent now holds n audio files

--- a/rahGRaphics_Test/rahGRaphics_Test.vcxproj.filters
+++ b/rahGRaphics_Test/rahGRaphics_Test.vcxproj.filters
@@ -62,5 +62,8 @@
     <FxCompile Include="shapes.fx">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="SSAO.fx">
+      <Filter>Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
